Timesheet/main/default/objects/Timesheet_Line_Item__c/Timesheet_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Timesheet Line Item</label>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>