Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Created_From_Timer__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Timer__c</fullName>
    <label>Created From Timer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>