Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>