Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The time the timer was stopped for this line item.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>