Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Hours_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Hours_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hours Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>