Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Status__c</fullName>
    <label>Line Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Partial Submitted</fullName>
            </value>
            <value>
                <fullName>Partial Approved</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>