Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Time_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>