Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Project_Employee__c.field-meta.xml
<CustomField>
    <fullName>Project_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Employee</label>
    <referenceTo>Project_Employee__c</referenceTo>
    <relationshipLabel>Time Sheet Line Items</relationshipLabel>
    <relationshipName>Time_Sheet_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>