Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The time the timer was started for this line item.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>