Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <label>Timesheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipLabel>Time Sheet Line Items</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>