Timesheet/main/default/objects/Timesheet_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance</fullName>
                <default>true</default>
                <label>Attendance</label>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>