Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Absence_Category_for_Absence_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Absence_Category_for_Absence_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Type__c , &quot;Absence&quot;) ,
          ISPICKVAL( Absence_Category__c , &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Absence_Category__c</errorDisplayField>
    <errorMessage
  >Absence category cannot be blank when Type is Absence</errorMessage>
</ValidationRule>