Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Absence_Category_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Absence_Category_Validation</fullName>
    <active>true</active>
    <description>Absence category is required for Absence</description>
    <errorConditionFormula
  >AND( ISPICKVAL(Type__c, &apos;Absence&apos;),  ISPICKVAL( Absence_Category__c , &apos; &apos;) )</errorConditionFormula>
    <errorMessage>Absence category is required</errorMessage>
</ValidationRule>