Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &quot;Absence&quot;) ,
 Duration__c  &gt; 8)</errorConditionFormula>
    <errorDisplayField>Duration__c</errorDisplayField>
    <errorMessage>if the type is Absence the Duration fields value should not be greater than 8.</errorMessage>
</ValidationRule>