Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Duration_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Duration_Validation</fullName>
    <active>true</active>
    <errorConditionFormula
  >Hours_Limit_Exceeded__c  = true</errorConditionFormula>
    <errorMessage
  >Duration entered for the date has exceeded 24 hours</errorMessage>
</ValidationRule>