Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Project_and_Activity_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_and_Activity_validation</fullName>
    <active>true</active>
    <description>Project and Activity are required for Attendance</description>
    <errorConditionFormula>AND(
ISPICKVAL( Type__c , &apos;Attendance&apos;),
				 OR(ISBLANK(Project__c),
								ISPICKVAL(Activity__c, &quot;&quot;)
							)
)</errorConditionFormula>
    <errorMessage
  >Both Project and Activity are required for Attendance</errorMessage>
</ValidationRule>