Timesheet/main/default/objects/Timesheet_Line_Item__c/validationRules/Validate_Timesheet_Line_Item_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Timesheet_Line_Item_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Date__c      &lt;      Timesheet__r.Start_Date__c,
Date__c        &gt;    Timesheet__r.End_Date__c )</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>The Date should be between Start Date and End Date of the Timesheet Master.</errorMessage>
</ValidationRule>